# cuda_tridiangonal_solver_PCR

./: .gitignore  CMakeLists.txt  PCR_Class.cu  PCR_Device_Functions.cu  PCR_TEST.cu  README.md  TDMA_TEST.cpp  Test_Main.cu  tdma.h
double-precision/: .gitignore  CMakeLists.txt  PCR_Class.cu  PCR_Class.h  PCR_Device_Functions.cu  PCR_Device_Functions.cuh  PCR_TEST.cu  README.md  TDMA_TEST.cpp
pcr/: CMakeLists.txt
pcr/cmake/: PCRConfig.cmake.in
pcr/src/: PCR_Class.cu  PCR_Device_Functions.cu
tdma/: CMakeLists.txt
tdma/include/tdma/: tdma.h
test/pcr-vs-tdma/: CMakeLists.txt  Test_Main.c
test/tdma-only/: CMakeLists.txt  Test_Main.cpp
utils/: CMakeLists.txt
utils/include/: utils.h
